--- a/search_app/templates/cart_empty.html
+++ b/search_app/templates/cart_empty.html
@@ -1,2 +1,3 @@
-<h2>カートが空です</h2>
-<a href="{% url 'home' %}">ホームへ戻る</a>
+<h1>カート</h1>
+<p>現在、カートには商品がありません。</p>
+<a href="{% url 'home' %}">商品を探しに行く</a>
